[package]
name = "single-turn-yatzy"
version = "0.1.0"
edition = "2021"
authors = ["J. Leffler <drgarlicbread@proton.me>", "S. Rydh Rabek <hemliganka@yahoo.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = "0.13.1"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.2.0"
uuid = {version = "1.6.1", features=["v4"]}
